--- a/TheLocalGeekery/Views/Menu/Details.cshtml
+++ b/TheLocalGeekery/Views/Menu/Details.cshtml
@@ -8,7 +8,7 @@
 <h2>Menu item: @Model.ItemName</h2>
 <ul>
     <li>
-        Album Art: <img src="@Model.ItemImageUrl" alt="@Model.ItemName" />
+        <img src="@Model.ItemImageUrl" alt="@Model.ItemName" />
     </li>
     <li>
         Description: @Model.ItemDescription
