--- a/TheLocalGeekery/Views/Home/Contact.cshtml
+++ b/TheLocalGeekery/Views/Home/Contact.cshtml
@@ -1,17 +1,31 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contact - The Local Geekery";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<div class="jumbotron">
+    <h1 class="main-title">The Local Geekery</h1>
+    <div class="col-md-6">
+    <h2>@ViewBag.Title.</h2>
+    <h3>@ViewBag.Message</h3>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+    <address>
+        17000 Concession Road 10<br />
+        Schomberg, ON  L0G 1T0<br />
+        <abbr title="Phone">P:</abbr>
+        905-939-6332
+    </address>
+
+    <address>
+        <strong>General inquiries:</strong>   <a href="mailto:inquiries@thelocalgeekery.com">inquiries@thelocalgeekery.com</a><br />
+        <strong>Menu suggestions:</strong> <a href="mailto:menu@thelocalgeekery.com">menu@thelocalgeekery.com</a>
+    </address>
+    </div>
+    <div class="col-lg-offset-6">
+        <div class="thumbnail">
+            <img src="~/Assets/images/googleMaps.jpg" alt="Google Map view">
+            <div class="caption">
+                <p>Google Maps location view.</p>
+            </div>
+        </div>
+    </div>
+</div>
