--- a/TheLocalGeekery/Views/Home/Index.cshtml
+++ b/TheLocalGeekery/Views/Home/Index.cshtml
@@ -1,31 +1,36 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home - The Local Geekery";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+    <h1 class="main-title">The Local Geekery</h1>
+    <p class="lead">
+             Welcome to The Local Geekery's webpage! Located just outside of Schomberg, The Local Geekery is a small lunch café catering to
+        geeks of all fandoms.
+        <br />
+        <br />
+             With a casual, relaxed environment, you'll feel right at home discussing the latest episode of your favorite TV with your friends,
+        or bunkering down on your own, novel in hand.
+        <br />
+        <br />
+             Menu items are limited and cycle regularly. If you don't see something from your fandom this month, you can check back next month.
+        We also take suggestions if you have an idea of geeky eat or drink you'd like us to attempt!
+        <br />
+        <br />
+        <button type="button" class="btn btn-lg btn-default menu-button">@Html.ActionLink("Check out our Menu!", "Index", "Menu")</button>
+    </p>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="row">
+        <p>The interior of the restaurant.</p>
+        <div class="col-md-6">
+            <div class="thumbnail center-block">
+                <img src="~/Assets/images/interior1.jpg" alt="Interior view 1" />
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="thumbnail center-block">
+                <img src="~/Assets/images/interior2.jpg" alt="Interior view 2" />
+            </div>
+        </div>
     </div>
 </div>
