--- a/TheLocalGeekery/Views/Shared/_Layout.cshtml
+++ b/TheLocalGeekery/Views/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
                 @Html.ActionLink("The Local Geekery", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li class="navbar-right">@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li class="navbar-right">@Html.ActionLink("Menu", "Index", "Menu")</li>
-                    <li class="navbar-right">@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Menu", "Index", "Menu")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
             </div>
         </div>
@@ -31,8 +31,10 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
+    </div>
+    <div id="footer">
         <footer>
-            <p>&copy; @DateTime.Now.Year - The Local Geekery</p>
+            <p style="padding-left: 10px;">&copy; @DateTime.Now.Year - The Local Geekery</p>
         </footer>
     </div>
 
