Remove app insights

--- a/TheLocalGeekery/Views/Home/Contact.cshtml
+++ b/TheLocalGeekery/Views/Home/Contact.cshtml
@@ -4,17 +4,25 @@
 
 <div class="jumbotron">
     <h1 class="main-title">The Local Geekery</h1>
+    <h2>Contact Us</h2>
     <div class="col-md-6">
-    <h2>@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
-
+        <h3>Hours</h3>
+        <ul>
+            <li>M-T: 10am-3pm</li>
+            <li>F: 10am-6pm</li>
+            <li>Sat: 9am-5pm</li>
+            <li>Sun: CLOSED</li>
+        </ul>
+        <br />
+        <h3>Location & Phone</h3>
     <address>
         17000 Concession Road 10<br />
         Schomberg, ON  L0G 1T0<br />
         <abbr title="Phone">P:</abbr>
         905-939-6332
     </address>
-
+        <br />
+        <h3>Email:</h3>
     <address>
         <strong>General inquiries:</strong>   <a href="mailto:inquiries@thelocalgeekery.com">inquiries@thelocalgeekery.com</a><br />
         <strong>Menu suggestions:</strong> <a href="mailto:menu@thelocalgeekery.com">menu@thelocalgeekery.com</a>
