--- a/TheLocalGeekery/Views/Home/Index.cshtml
+++ b/TheLocalGeekery/Views/Home/Index.cshtml
@@ -22,6 +22,7 @@
 
     <div class="row">
         <p>The interior of the restaurant.</p>
+        @*Images taken from the following article: http://io9.gizmodo.com/the-greatest-science-fiction-themed-bars-and-restaurant-512256764*@
         <div class="col-md-6">
             <div class="thumbnail center-block">
                 <img src="~/Assets/images/interior1.jpg" alt="Interior view 1" />
